--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4.17"
 libc = "0.2.139"
 socket2 = "0.5.1"
 memmap2 = "0.5.10"
+env_logger = "0.10.0"
